--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -17,23 +17,23 @@ html
     link(rel="icon", type="image/png", href="#{data.baseUrl}images/cabin.png")
     link(href="#{data.baseUrl}styles/main.css", rel="stylesheet")
     block head
-      title= "My Blog"
+      title= "mrhanlon"
   body
     nav
       h1.name
-        a(href="#{data.baseUrl}") My Name
+        a(href="#{data.baseUrl}") mrhanlon
       .menu.icon-menu
       ul.nav-links
-        li.text-link
-          a(href="#{data.baseUrl}about.html") about
         li.text-link
           a(href="#{data.baseUrl}projects.html") projects
         li.text-link
           a(href="#{data.baseUrl}archives.html") archives
+        li.text-link
+          a(href="#{data.baseUrl}about.html") about
 
       .social-media
-        a.icon-github(href="https://github.com/colinwren")
-        a.icon-twitter(href="https://twitter.com/colinwrenca")
+        a.icon-github(href="https://github.com/mrhanlon")
+        a.icon-twitter(href="https://twitter.com/mattorantimatt")
     .content
       block content
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js", type="text/javascript")
