--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,15 +3,17 @@ $green: hsl(151, 65%, 60%);
 $blue: hsl(216, 65%, 60%);
 $orange: hsl(6, 90%, 70%);
 $purple: hsl(260, 38%, 56%);
+$mrhanlon: #3e5d5c;
 
 $offBlack: hsl(10, 1%, 22%);
 $grey: lighten($offBlack, 50);
+
 
 $codeFont: Monaco, Consolas, monospace;
 $postFont: 'Merriweather', serif;
 $headerFont: 'Open Sans', sans-serif;
 
-$mainTheme: $blue;
+$mainTheme: $mrhanlon;
 $baseTextColor: $offBlack;
 $lightTextColor: $grey;
 
