--- a/src/layouts/_social.jade
+++ b/src/layouts/_social.jade
@@ -32,7 +32,7 @@ script(type="text/javascript").
 
 // Disqus
 script(type="text/javascript").
-  var disqus_shortname = 'colinwren'; // Change this to your Disqus account name
+  var disqus_shortname = 'mrhanlon'; // Change this to your Disqus account name
 
   (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
