--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,37 @@
 .pull-right {
   float: right;
 }
+
+.label {
+  display: inline;
+  padding: .2em .6em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  @include border-radius(.25em);
+}
+
+.label-default {
+  background-color: #999;
+}
+
+.social-media-2 {
+  font-size: 1.8em;
+  line-height: 2em;
+
+  a {
+    text-decoration: none;
+    margin: 0 10px;
+
+    // This is used to prevent the edges of the icon character from being cut off
+    padding: 2px;
+  }
+}
+
+pre {
+  font-family: $codeFont;
+}
