updated structure, actual content

--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -28,9 +28,9 @@ html
         //li.text-link
         //  a(href="#{data.baseUrl}projects.html") projects
         li.text-link
-          a(href="#{data.baseUrl}archives.html") archives
+          a(href="#{data.baseUrl}posts.html") posts
         li.text-link
-          a(href="#{data.baseUrl}about.html") about
+          a(href="#{data.baseUrl}archives.html") archives
 
       .social-media
         a.fa.fa-github(href="https://github.com/mrhanlon")
