--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -1,6 +1,6 @@
 extends ../layouts/base
 block head
-  title $> whois
+  title $> whois mrhanlon
 block content
   h1.highlight
     pre $> whois mrhanlon
