--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -6,7 +6,7 @@ block content
     pre $> whois mrhanlon
 
   p .
-    Hi, I'm Matt! I'm a software developer living in Austin. I mostly develop web
+    Hi, I'm Matt! I'm a software developer living in Austin. I develop web
     applications for scientists to help them be more productive in their science.
     Whether it's data management, point-and-click access to computational resources,
     or the more mundane, I help to make sure scientists and researchers can focus
