--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import 'http://fonts.googleapis.com/css?family=Merriweather|Open+Sans';
+@import '//fonts.googleapis.com/css?family=Merriweather|Open+Sans';
 @import 'compass';
 @import 'normalize';
 @import 'solarized-dark';
