--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -92,6 +92,10 @@ block content
   h4 Presentations
 
   div
+    span.label.label-default.pull-right 2014
+    span &#8220;Project Management and Automation: Using Maven and Grunt to accelerate development&#8221;. Software Engineering Assembly Conference, UCAR, Boulder, CO, USA. [Slides](https://mrhanlon.com/slides/sea2014).
+
+  div
     span.label.label-default.pull-right 2013
     span &#8220;Using Liferay as a platform for Computational Science&#8221;. Liferay North American Symposium, San Francisco, USA.
 
