updated articles, presentations

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -75,33 +75,76 @@ block content
 
   h4 Journal articles
 
-  div
+  p
     span.label.label-default.pull-right 2014
-    span M. Hanlon, W. Smith, S. Mock, &#8220;Providing resource information to users of a national computing center&#8221;. [Special issue] <i>Concurrency and Computation: Practice and Experience</i>.
+    span
+      | R. Dooley, M. Hanlon, &#8220;Recipes 2.0: Building for Today and Tomorrow&#8221;.
+      | [Special issue] <i>Concurrency and Computation: Practice and Experience</i>.
+      &nbsp;
+      a(href='http://dx.doi.org/10.1002/cpe.3285') 10.1002/cpe.3285
+      | .
+
+  p
+    span.label.label-default.pull-right 2014
+    span
+      | M. Hanlon, W. Smith, S. Mock, &#8220;Providing resource information to users of a national computing center&#8221;.
+      | [Special issue] <i>Concurrency and Computation: Practice and Experience</i>.
+      &nbsp;
+      a(href='http://dx.doi.org/10.1002/cpe.3233') 10.1002/cpe.3233
+      | .
 
   h4 Conference proceedings
 
-  div
+  p
     span.label.label-default.pull-right 2011
-    span M. Hanlon, et al., &#8220;Benefits of NoSQL databases for portals &amp; science gateways&#8221;. Proceedings of the TeraGrid Conference: Extreme Digital Discovery.
+    span
+      | M. Hanlon, et al., &#8220;Benefits of NoSQL databases for portals &amp; science gateways&#8221;.
+      | Proceedings of the TeraGrid Conference: Extreme Digital Discovery.
 
-  div
+  p
     span.label.label-default.pull-right 2010
-    span M.R. Hanlon, et al., &#8220;My-Plant.org: A phylogenetically structured social network&#8221;. Gateway Computing Environments Workshop (GCE).
+    span
+      | M.R. Hanlon, et al., &#8220;My-Plant.org: A phylogenetically structured social network&#8221;.
+      | Gateway Computing Environments Workshop (GCE).
 
   h4 Presentations
 
-  div
+  p
     span.label.label-default.pull-right 2014
-    span &#8220;Project Management and Automation: Using Maven and Grunt to accelerate development&#8221;. Software Engineering Assembly Conference, UCAR, Boulder, CO, USA. [Slides](https://mrhanlon.com/slides/sea2014).
+    span
+      | &#8220;Project Management and Automation: Using Maven and Grunt to accelerate development&#8221;.
+      | Software Engineering Assembly Conference, UCAR, Boulder, CO, USA. Slides:
+      &nbsp;
+      a(href='https://mrhanlon.com/slides/sea2014') HTML5
+      &nbsp;
+      a(href='http://www.slideshare.net/mrhanlon/project-management-and-automation') PDF
+      | .
+      &nbsp;
+      a(href='https://github.com/mrhanlon/sea2014-demo') Demo code
+      | .
 
-  div
-    span.label.label-default.pull-right 2013
-    span &#8220;Using Liferay as a platform for Computational Science&#8221;. Liferay North American Symposium, San Francisco, USA.
+  p
+    span.label.label-default.pull-right 2014
+    span
+      | &#8220;Federated Authentication in a Campus System.&#8221;.
+      | Liferay .edu User Group. Webcast. Slides:
+      &nbsp;
+      a(href='http://www.slideshare.net/mrhanlon/federated-authe') PDF
+      | .
 
-  div
+  p
     span.label.label-default.pull-right 2013
-    span &#8220;Introduction to Science Gateways Workshop&#8221;. Elizabeth City State University, North Carolina, USA.
+    span
+      | &#8220;Using Liferay as a platform for Computational Science&#8221;. Liferay North American Symposium, San Francisco, USA.
+
+  p
+    span.label.label-default.pull-right 2013
+    span
+      | &#8220;Introduction to Science Gateways Workshop&#8221;.
+      | Elizabeth City State University, North Carolina, USA.
+      &nbsp;
+      a(href='https://bitbucket.org/taccaci/gateway-dna-tutorial') Demo code
+      | .
 
   h3 Open source software contributions
 
