updated open source contrib

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -148,21 +148,34 @@ block content
 
   h3 Open source software contributions
 
-  small (* - contributed to)
+  p
+    a(href='https://atom.io/packages/less-than-slash') Less Than-Slash
+    &nbsp;
+    | - A package for the
+    &nbsp;
+    a(href='https://atom.io/') Atom Editor
+    &nbsp;
+    | that closes open markup tags when you type
+    &nbsp;
+    code &lt;/
+    | .
 
-  ul
-    li
-      a(href='https://www.npmjs.org/package/commnq') CommnQ
-      &nbsp; - An AMQP library for Node.js with conveniences for running multiple tasks on AMQP messages.
-    li
-      a(href='https://github.com/Arabidopsis-Information-Portal') Arabidopsis Information Portal
-      &nbsp; - Various projects developed for the Arabidopsis Information Portal.
-    li
-      a(href='https://github.com/iPlantCollaborativeOpenSource') iPlant Collaborative
-      &nbsp; - Various projects developed by the iPlant Collaborative.
-    li
-      a(href='https://github.com/jknack/handlebars.java') Handlebars.java
-      | * - Logic-less and semantic Mustache templates with Java
-    li
-      a(href='https://github.com/stanlemon/jGrowl') jGrowl
-      | * - An unobtrusive notification system for web applications.
+  p
+    a(href='https://www.npmjs.org/package/commnq') CommnQ
+    &nbsp; - An AMQP library for Node.js with conveniences for running multiple tasks on AMQP messages.
+
+  p
+    a(href='https://github.com/Arabidopsis-Information-Portal') Arabidopsis Information Portal
+    &nbsp; - Various projects developed for the Arabidopsis Information Portal.
+
+  p
+    a(href='https://github.com/iPlantCollaborativeOpenSource') iPlant Collaborative
+    &nbsp; - Various projects developed by the iPlant Collaborative.
+
+  p
+    a(href='https://github.com/jknack/handlebars.java') Handlebars.java
+    | - Logic-less and semantic Mustache templates with Java
+
+  p
+    a(href='https://github.com/stanlemon/jGrowl') jGrowl
+    | - An unobtrusive notification system for web applications.
