updated positions, publications, open source; added volunteering

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -26,8 +26,6 @@ block content
   h3 Current position
 
   div Manager, Web &amp; Mobile Applications
-  div
-    em Research Engineer/Scientist Associate IV
   div Texas Advanced Computing Center, The University of Texas at Austin
 
   h3 Areas of specialization
@@ -38,11 +36,14 @@ block content
     li User Interfaces
     li User Experience
 
-  h3 Appointments held
-
+  h3 Work experience
+  
   div
     span.label.label-default.pull-right 2010 &ndash; present
-    span Texas Advanced Computing Center, The University of Texas at Austin
+    span Texas Advanced Computing Center, The University of Texas at Austin, Austin, Texas
+  div
+    span.label.label-default.pull-right 2007 &ndash; 2010
+    span Alliance Communications Management, Mobile, Alabama
 
   h3 Education
 
@@ -53,7 +54,7 @@ block content
     span.label.label-default.pull-right 2003
     span BS in Mathematics, Spring Hill College, Mobile, Alabama
 
-  h3 Grants, honors, &amp; awards
+  h3 Honors &amp; awards
 
   div
     span.label.label-default.pull-right 2010 &ndash; 2011
@@ -66,7 +67,7 @@ block content
     span CIS Graduate Fellowship - University of South Alabama
   div
     span.label.label-default.pull-right 2003
-    span Presidents Honors in Mathematics - Spring Hill College
+    span President's Honors, Mathematics - Spring Hill College
   div
     span.label.label-default.pull-right 2003
     span Hutchinson Award, Philosophy - Spring Hill College
@@ -94,13 +95,19 @@ block content
       | .
 
   h4 Conference proceedings
-
+  
+  p
+    span.label.label-default.pull-right 2014
+    span
+      | M. Hanlon, et al., &#8220;The Arabidopsis Information Portal: An Application Platform for Data Discovery&#8221;.
+      | Proceedings of the 9th Gateway Computing Environments Workshop.
+          
   p
     span.label.label-default.pull-right 2011
     span
       | M. Hanlon, et al., &#8220;Benefits of NoSQL databases for portals &amp; science gateways&#8221;.
       | Proceedings of the TeraGrid Conference: Extreme Digital Discovery.
-
+      
   p
     span.label.label-default.pull-right 2010
     span
@@ -108,7 +115,16 @@ block content
       | Gateway Computing Environments Workshop (GCE).
 
   h4 Presentations
-
+  
+  p
+    span.label.label-default.pull-right 2014
+    span
+      | &#8220;Discovering and using Araport Data APIs in Araport Science Apps&#8221;.
+      | The First Araport Developers Conference, TACC, Austin, TX, USA.
+      &nbsp;
+      a(href='https://github.com/Arabidopsis-Information-Portal/workshop-tutorial-app/blob/tutorial/3/TUTORIAL.md') Tutorial
+      .
+      
   p
     span.label.label-default.pull-right 2014
     span
@@ -167,6 +183,10 @@ block content
   p
     a(href='https://github.com/Arabidopsis-Information-Portal') Arabidopsis Information Portal
     &nbsp; - Various projects developed for the Arabidopsis Information Portal.
+    
+  p
+    a(href='https://github.com/ChameleonCloud') Chameleon
+    &nbsp; - Various development as part of the Chameleon Cloud Testbed.
 
   p
     a(href='https://github.com/iPlantCollaborativeOpenSource') iPlant Collaborative
@@ -174,8 +194,18 @@ block content
 
   p
     a(href='https://github.com/jknack/handlebars.java') Handlebars.java
-    | - Logic-less and semantic Mustache templates with Java
+    &nbsp; - Logic-less and semantic Mustache templates with Java
 
   p
     a(href='https://github.com/stanlemon/jGrowl') jGrowl
-    | - An unobtrusive notification system for web applications.
+    &nbsp; - An unobtrusive notification system for web applications.
+
+  h3 Volunteering
+  
+  p
+    a(href='https://austingivecamp.org') Austin GiveCamp 2014
+    &nbsp; - Part of a hackathon team to develop a Flask app for 
+    a(href='http://ghisallo.org/') The Ghisallo Foundation's
+    | 
+    a(href='http://cycleacademy.org/') Cycle Academy
+    &nbsp;project.
