--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -30,11 +30,11 @@ block content
 
   h3 Areas of specialization
 
-  ul
-    li Web Applications
-    li Asynchronous Applications
-    li User Interfaces
-    li User Experience
+  div 
+    | Web Applications &bull; Asynchronous Applications &bull; 
+    | User Interfaces &bull; User Experience &bull; JavaScript &bull; 
+    | Java &bull; Python &bull; Spring &bull; Hibernate &bull; Angular.js &bull; 
+    | Node.js &bull; Django
 
   h3 Work experience
   
@@ -58,19 +58,19 @@ block content
 
   div
     span.label.label-default.pull-right 2010 &ndash; 2011
-    span Outstanding Master’s Thesis - University of South Alabama
+    span Outstanding Master’s Thesis, University of South Alabama
   div
     span.label.label-default.pull-right 2008
-    span Outstanding Graduate Student - University of South Alabama
+    span Outstanding Graduate Student, University of South Alabama
   div
     span.label.label-default.pull-right 2008
-    span CIS Graduate Fellowship - University of South Alabama
+    span CIS Graduate Fellowship, University of South Alabama
   div
     span.label.label-default.pull-right 2003
-    span President's Honors, Mathematics - Spring Hill College
+    span President's Honors, Mathematics, Spring Hill College
   div
     span.label.label-default.pull-right 2003
-    span Hutchinson Award, Philosophy - Spring Hill College
+    span Hutchinson Award, Philosophy, Spring Hill College
 
   h3 Selected publications &amp; talks
 
@@ -82,7 +82,7 @@ block content
       | R. Dooley, M. Hanlon, &#8220;Recipes 2.0: Building for Today and Tomorrow&#8221;.
       | [Special issue] <i>Concurrency and Computation: Practice and Experience</i>.
       &nbsp;
-      a(href='http://dx.doi.org/10.1002/cpe.3285') 10.1002/cpe.3285
+      a(href='http://dx.doi.org/10.1002/cpe.3285') doi:10.1002/cpe.3285
       | .
 
   p
@@ -91,7 +91,7 @@ block content
       | M. Hanlon, W. Smith, S. Mock, &#8220;Providing resource information to users of a national computing center&#8221;.
       | [Special issue] <i>Concurrency and Computation: Practice and Experience</i>.
       &nbsp;
-      a(href='http://dx.doi.org/10.1002/cpe.3233') 10.1002/cpe.3233
+      a(href='http://dx.doi.org/10.1002/cpe.3233') doi:10.1002/cpe.3233
       | .
 
   h4 Conference proceedings
