--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -6,18 +6,16 @@ block content
     pre $> whois mrhanlon
 
   p .
-    Hi, I'm Matt! I'm a software developer living in Austin. I develop web
-    applications for scientists to help them be more productive in their science.
-    Whether it's data management, point-and-click access to computational resources,
-    or the more mundane, I help to make sure scientists and researchers can focus
-    more time and effort on their science, and not the technology that has become
-    inextricable from large-scale, computationally- or data-intensive science.
+    Hi, I'm Matt! I'm a software developer living in Austin. For over a decade I have
+    developed data intensive applications and APIs for uses ranging from enabling
+    supercomputing with a smartphone to sentiment analysis of millions of social network
+    messages a day.
 
   .social-media-2
     a.fa.fa-github(href="https://github.com/mrhanlon")
     a.fa.fa-bitbucket(href="https://bitbucket.org/mrhanlon")
-    a.fa.fa-twitter(href="https://twitter.com/mattorantimatt")
     a.fa.fa-linkedin(href="https://linkedin.com/in/mrhanlon")
+    a.fa.fa-twitter(href="https://twitter.com/mattorantimatt")
 
   h2 Curriculum Vitae&nbsp;
     a(href='/files/mrhanlon_cv.pdf', title='Download my CV')
@@ -25,21 +23,24 @@ block content
 
   h3 Current position
 
-  div Manager, Web &amp; Mobile Applications
-  div Texas Advanced Computing Center, The University of Texas at Austin
+  div Principal Software Engineer
+  div Oracle Social Cloud, Oracle, Inc.
 
   h3 Areas of specialization
 
   div 
-    | Web Applications &bull; Asynchronous Applications &bull; 
-    | User Interfaces &bull; User Experience &bull; JavaScript &bull; 
-    | Java &bull; Python &bull; Spring &bull; Hibernate &bull; Angular.js &bull; 
-    | Node.js &bull; Django
+    | Web Applications &amp; APIs Concurrency &bull; Full Stack Development &bull;
+    | Ruby &bull; Java &bull; Python &bull; JavaScript &bull;
+    | Rails &bull; Spring  &bull; Django &bull; Node.js  &bull; Angular.js &bull;
+    | Hibernate &bull; MySQL &bull; PostgreSQL
 
   h3 Work experience
   
   div
-    span.label.label-default.pull-right 2010 &ndash; present
+    span.label.label-default.pull-right 2016 &ndash; present
+    span Oracle Social Cloud, Oracle, Inc., Austin, Texas
+  div
+    span.label.label-default.pull-right 2010 &ndash; 2016
     span Texas Advanced Computing Center, The University of Texas at Austin, Austin, Texas
   div
     span.label.label-default.pull-right 2007 &ndash; 2010
@@ -97,11 +98,17 @@ block content
   h4 Conference proceedings
   
   p
+    span.label.label-default.pull-right 2017
+    span
+      | M. Hanlon, et al., &#8220;Securing HPC: Development of a Low Cost, Open Source Multi-factor Authentication Infrastructure&#8221;.
+      | Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis. SC '17.
+
+  p
     span.label.label-default.pull-right 2014
     span
       | M. Hanlon, et al., &#8220;The Arabidopsis Information Portal: An Application Platform for Data Discovery&#8221;.
       | Proceedings of the 9th Gateway Computing Environments Workshop.
-          
+
   p
     span.label.label-default.pull-right 2011
     span
@@ -111,7 +118,7 @@ block content
   p
     span.label.label-default.pull-right 2010
     span
-      | M.R. Hanlon, et al., &#8220;My-Plant.org: A phylogenetically structured social network&#8221;.
+      | M. Hanlon, et al., &#8220;My-Plant.org: A phylogenetically structured social network&#8221;.
       | Gateway Computing Environments Workshop (GCE).
 
   h4 Presentations
@@ -209,3 +216,8 @@ block content
     | 
     a(href='http://cycleacademy.org/') Cycle Academy
     &nbsp;project.
+
+  h3 Hobbies
+
+  p
+    Running, Swimming, Triathlon, Cooking, Science Fiction
