--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -29,7 +29,7 @@ block content
   h3 Areas of specialization
 
   div 
-    | Web Applications &amp; APIs Concurrency &bull; Full Stack Development &bull;
+    | Web Applications &bull; APIs &bull; Full Stack Development &bull;
     | Ruby &bull; Java &bull; Python &bull; JavaScript &bull;
     | Rails &bull; Spring  &bull; Django &bull; Node.js  &bull; Angular.js &bull;
     | Hibernate &bull; MySQL &bull; PostgreSQL
@@ -219,5 +219,4 @@ block content
 
   h3 Hobbies
 
-  p
-    Running, Swimming, Triathlon, Cooking, Science Fiction
+  p Running, Swimming, Triathlon, Cooking, Science Fiction
