--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,18 +1,11 @@
-// Dark Green (#051F20)
-// Phthalo Green (#0B2B26)
-// Medium Jungle Green (#163832)
-// Brunswick Green (#235347)
-// Dark Sea Green (#8EB69B)
-// Chinese White (#DAF1DE)
-
-@import "theme";
+@import 'theme.scss';
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
   @include theme('color', $primary-text-color);
   @include theme('background-color', $background-color);
