--- a/src/pages/walsh-band/index.astro
+++ b/src/pages/walsh-band/index.astro
@@ -1,19 +1,19 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import CSS from "../../styles/WalshBand.module.scss";
+import Layout from '../../layouts/Layout.astro';
+import CSS from '../../styles/WalshBand.module.scss';
 ---
 <Layout title="Walsh Band Videos">
-    <div class={CSS.container}>
-        <main class={CSS.main}>
-            <h1>Walsh Band Videos</h1>
-            <ul>
-                <li>
-                    <a href="/walsh-band/2021-2022">Walsh Band Videos: 2021-22</a>
-                </li>
-                <li>
-                    <a href="/walsh-band/2022-2023">Walsh Band Videos: 2022-23</a>
-                </li>
-            </ul>
-        </main>
-    </div>
+  <div class={CSS.container}>
+    <main class={CSS.main}>
+      <h1>Walsh Band Videos</h1>
+      <ul>
+        <li>
+          <a href="/walsh-band/2021-2022">Walsh Band Videos: 2021-22</a>
+        </li>
+        <li>
+          <a href="/walsh-band/2022-2023">Walsh Band Videos: 2022-23</a>
+        </li>
+      </ul>
+    </main>
+  </div>
 </Layout>
