--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components';
 <Layout title="Not Found">
   <main style="display: flex; flex-direction: column; align-items: center">
     <h1>Uh-oh!</h1>
-    <Icon name="mdi:heart-broken" size="200px" />
+    <Icon name="mdi:heart-broken" size={200} />
     <p>Looks like this page doesn't exist.</p>
   </main>
 </Layout>
