--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import { Icon } from 'astro-icon/components';
         accessibility. I strive for high-quality, high-performance, and highly
         maintainable code. I like solving interesting new problems, and am
         constantly looking for opportunities for self-improvement and to learn
-        new things. I work always with the hope than the things that I create
-        will serve to improve the lives of the people who use them.
+        new things. I always work with the hope that things I create will serve
+        to improve the lives of the people who use them.
       </p>
 
       <div class={CSS.social_links}>
