--- a/src/pages/dragon-band/2024/index.astro
+++ b/src/pages/dragon-band/2024/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import CSS from '../../styles/DragonBand.module.scss';
+import Layout from '../../../layouts/Layout.astro';
+import CSS from '../../../styles/DragonBand.module.scss';
 ---
 <Layout title="RRHS Dragon Band">
   <div class={CSS.container}>
